--- a/python_notebooks/Final_Project_Part_3.ipynb
+++ b/python_notebooks/Final_Project_Part_3.ipynb
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "365a409a",
+   "id": "79e1a2c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,12 +142,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myJekyllDir = r'C:\\Users\\PC\\kmadhura08.github.io\\assets\\json\\json'"
+    "myJekyllDir = r'C:\\Users\\PC\\kmadhura08.github.io\\assets\\json\\json'\n",
+    "https://github.com/kmadhura08/kmadhura08.github.io/tree/main/assets/json\n",
+    "    C:\\Users\\PC\\kmadhura08.github.io\\assets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "b0a5ceff",
    "metadata": {},
    "outputs": [],
@@ -351,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b6d457",
+   "id": "c49e8cc5",
    "metadata": {},
    "outputs": [],
    "source": []
